0030831: ShapeFix algorithm (creation of seam edge) takes too long time with thin faces

In class ShapeFix_ComposeShell the U- and V-closedness of input face is taken immediately avoiding the error when the face is small in any of these dimensions.
Test case for bug 0030831